# app/Http/Resources/AppointmentResource.php
@@ -2,9 +2,11 @@
 
 namespace App\Http\Resources;
 
+use App\Models\Appointment;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/** @mixin Appointment */
 class AppointmentResource extends JsonResource
 {
     public function toArray(Request $request): array
